--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <li>Reduced the size by 20% of cached application data by working with other application leads who shared same user base to develop a customized launcher for starting multiple Dassault Systemes applications.</li>
                         <li>Worked on developing LRP (License Release Portal) to reduce the licenses required by 30%. This system notified users to release licenses for inactive sessions using Rest API.</li>
                         <li>Developed robocopy script to reduce the number of AIX servers used from 10 to 3 for deploying upgrades over multiple locations by using one server per region strategy.</li>
-                        <li><strong>Technologies</strong>: Java, JavaFX, Junit, Octane, XML, HTML, jQuery, BootStrap</li>
+                        <li><strong>Technologies</strong>: Java, JavaFX, JMockit, XML, React, Linux, Bash, Octane, Service Now</li>
                     </ul>
                 </p>
             </div>
@@ -106,7 +106,7 @@
                         <li>Worked on developing backend for reading and extracting data of aircraft parts from word forms.</li>
                         <li>Involved in developing a new workflow to reduce the monitoring time by flat 75 minutes using multithreading.</li>
                         <li>Used Mail API to send out notifications to stakeholders once the application execution was completed.</li>
-                        <li><strong>Technologies</strong>: C#, VBA, SQL, .NET MVC, JavaScript, SASS, Node.js</li>
+                        <li><strong>Technologies</strong>: C#, SQL, .NET MVC, JavaScript, jQuery, Bootstrap, Node.js</li>
                     </ul>
                 </p>
             </div>
@@ -218,8 +218,8 @@
             <li>C#</li>
             <li>JavaScript</li>
             <li>CSS</li>
-            <li>SASS</li>
-            <li>bootstrap</li>
+            <li>React</li>
+            <li>Bootstrap</li>
             <li>jQuery</li>
             <li>Node.js</li>
             <li>HTML5</li>
