--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
             <p>
                 Subjects:<br>
                 <ul>
+                    <li>Android Development</li>
                     <li>Modern Web Development Frameworks</li>
+                    <li>Spatial Databases</li>
+                    <li>Computer Security</li>
                     <li>Applied Computer Vision</li>
                     <li>Formal Languages</li>
                 </ul>
