--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
         <div id="lead-content">
             <h1>Vishal Nehe</h1>
             <h2>Software Engineer</h2>
-            <a href="/resume/Vishal_Nehe.docx" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -118,8 +117,9 @@
                     <ul>
                         <li>Worked on developing backend for reading and extracting data of aircraft parts from word forms.</li>
                         <li>Involved in developing a new workflow to reduce the monitoring time by flat 75 minutes using multithreading.</li>
+                        <li>Created TMDB Android application to notify business users when updated data was available for use. Application was integrated with real-time database to show current status of execution and option to download daily analysis report.</li>
                         <li>Used Mail API to send out notifications to stakeholders once the application execution was completed.</li>
-                        <li><strong>Technologies</strong>: C#, SQL, .NET MVC, JavaScript, jQuery, Bootstrap, Node.js</li>
+                        <li><strong>Technologies</strong>: Java, Android Studio, Git, DELL EMC, JavaScript, jQuery, Bootstrap</li>
                     </ul>
                 </p>
             </div>
@@ -198,6 +198,23 @@
                             Created a web application where user can recharge mobile, pay electricity bills.
                             Online wallet was created for every user upon signup with the facility to recharge the wallet. Other functionalities included payment options, redeem code, email receipt.<br>
                             <strong>Technologies</strong>: C#, .NET MVC, Azure, HTML, CSS, JavaScript, SQL 
+                        </p>
+                        <!-- <a href="#">View Project</a> -->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/Online-Wallet.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>E-Wallet - Android application</h3>
+                        <p>
+                            Created an android application where user can recharge mobile, pay electricity bills.
+                            Other functionalities included payment options, redeem code, email receipt.<br>
+                            <strong>Technologies</strong>: Technologies – Java, Android Studio, SQLite
                         </p>
                         <!-- <a href="#">View Project</a> -->
                     </div>
