--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <li>Involved in developing a new workflow to reduce the monitoring time by flat 75 minutes using multithreading.</li>
                         <li>Created TMDB Android application to notify business users when updated data was available for use. Application was integrated with real-time database to show current status of execution and option to download daily analysis report.</li>
                         <li>Used Mail API to send out notifications to stakeholders once the application execution was completed.</li>
-                        <li><strong>Technologies</strong>: Java, Android Studio, Git, DELL EMC, JavaScript, jQuery, Bootstrap</li>
+                        <li><strong>Technologies</strong>: C#, Java, Android Studio, .NET MVC, Git, DELL EMC, JavaScript, jQuery, Bootstrap</li>
                     </ul>
                 </p>
             </div>
@@ -262,6 +262,8 @@
             <li>SSMS</li>
             <li>IntelliJ</li>
             <li>Android Studio</li>
+            <li>Firebase</li>
+            <li>Azure</li>
         </ul>
     </div>
     <!-- End #skills -->
